fix: plugin stability + KiCad 9 compatibility overhaul
- Fix frame garbage-collection ('works for a brief moment') bug:
  store AIPCBFrame on self._frame so GC never destroys the window
- Fix __init__.py: now triggers registration so KiCad scripting loader
  finds the ActionPlugin (was completely silent before)
- Add pcbnew_action.py: KiCad 9 PCM entry point with dual import
  fallback (relative package import + absolute sys.path fallback)
- Fix FloatCanvas import crash: wrapped in try/except with full DC
  fallback canvas using wx.ScrolledWindow when unavailable
- Fix GetBoundingBox() API: try (False,False) -> (False) -> () chain
- Fix GetOrientationDegrees() deprecated in KiCad 9: new
  _get_orientation_degrees() with AsDegrees() fallback
- Fix GetLibItemName() returns UTF8 not str: wrapped in str()
- Fix BOARD_COMMIT() no-arg crash: removed, replaced with silent try
- Wrap entire _extract_board_data() per-footprint in try/except
- Remove unused wx.grid import
- Guard wx.lib.scrolledpanel import with fallback
- Fix AddCheckTool / SetToggle API for wx4: use ToggleTool()
- Add build_pcm.ps1: builds versioned PCM ZIP to dist/pcm/v{ver}/
- Add deploy_kicad_plugin.ps1: fast dev deploy to KiCad roaming dir
- Update .gitignore: add .venv/, dist/, .pcm_stage/, *.zip, output JSON
- Rewrite README: Ollama-first setup, accurate API docs, troubleshooting

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ env/
 ENV/
 env.bak/
 venv.bak/
+.venv/
 
 # ===========================
 # Node.js / Next.js Frontend
@@ -107,3 +108,20 @@ ehthumbs.db
 *.bak
 *.swp
 *.cache
+
+# ===========================
+# Virtual Environments
+# ===========================
+.venv/
+
+# ===========================
+# PCM Build / Deploy Artifacts
+# ===========================
+.pcm_stage/
+dist/
+*.zip
+
+# ===========================
+# Generated Output JSON
+# ===========================
+ai_backend/output/*.json
